--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,3 +1,10 @@
+@import "fonts.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+input {
+    @apply outline outline-1 outline-gray-300 rounded-md px-4 py-1 shadow-md mb-4;
+}
+
