--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,9 +4,6 @@
 @tailwind components;
 @tailwind utilities;
 
-input {
-    @apply outline outline-1 outline-gray-300 rounded-md px-4 py-3 shadow-md mb-4;
-}
 
 
 
@@ -18,3 +15,17 @@ input {
         transform: rotate(360deg);
     }
 }
+
+input[type="text"], input[type="password"], input[type="number"]{
+    @apply outline outline-1 outline-gray-300 rounded-md px-4 py-2 shadow-md ;
+}
+
+
+select {
+    @apply  rounded-md px-4 py-2 bg-gray-200 hover:bg-gray-300 text-gray-600
+}
+
+button {
+    @apply  rounded-md px-4 py-2 bg-gray-200 hover:bg-gray-300 text-gray-600
+}
+
